[project]
name = "helm-sdkpy"
version = "0.0.6"
description = "Python bindings for Helm - The Kubernetes Package Manager"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
	{name = "VantageCompute"}
]
keywords = ["helm", "kubernetes", "k8s", "package-manager", "bindings"]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Systems Administration",
]
dependencies = [
	"cffi>=1.15",
]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml] ~= 7.8",
    "pytest ~= 8.3",
    "pytest-mock ~= 3.14",
    "pytest-order ~= 1.3",
    "python-dotenv ~= 1.0",

    # Linting
    "ruff",
    "codespell",
    "pyright",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pyright>=1.1.406",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]


[tool.hatch.build.targets.wheel]
packages = ["helm_sdkpy"]
# Include binary artifacts (shared libraries)
artifacts = [
    "helm_sdkpy/_lib/**/*",
]

# Source distribution - mirror wheel contents plus build requirements
[tool.hatch.build.targets.sdist]
# Only include helm_sdkpy package (same as wheel) plus essential build files
only-include = [
    "helm_sdkpy",
    "go",
    "pyproject.toml",
    "README.md", 
    "LICENSE",
]
# Include binary files in sdist
artifacts = [
    "helm_sdkpy/_lib/**/*",
]

[tool.hatch.metadata]
allow-direct-references = true

# Pyright configuration
[tool.pyright]
include = ["helm_sdkpy", "tests"]
exclude = ["examples", "build", "vendor"]
pythonVersion = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.coverage.run]
source = ["helm_sdkpy"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
